# Olympus

./: .bazelrc  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS  BUILD.bazel  CHANGELOG.md  CITATION.bib  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE  build_wheel.py  conftest.py  pyproject.toml  pyrefly.toml  setup.py  test_shard_count.bzl
benchmarks/: api_benchmark.py  linalg_benchmark.py  math_benchmark.py  random_benchmark.py  shape_poly_benchmark.py  sparse_benchmark.py  tracing_benchmark.py
benchmarks/mosaic/: BUILD  matmul_bench.py
ci/: CONTRIBUTING.md  README.md  build_artifacts.sh  run_bazel_test_cpu_rbe.sh  run_bazel_test_cuda_non_rbe.sh  run_bazel_test_cuda_rbe.sh  run_bazel_test_tpu.sh  run_pytest_cpu.sh  run_pytest_cuda.sh  run_pytest_rocm.sh  run_pytest_tpu.sh
ci/envs/: README.md  default.env  docker.env
ci/k8s/: indexed-job.yaml  jobset.yaml
ci/utilities/: README.md  convert_msys_paths_to_win_paths.py  install_wheels_locally.sh  run_auditwheel.sh  run_docker_container.sh  setup_build_environment.sh
cloud_tpu_colabs/: Lorentz_ODE_Solver.ipynb  OLYMPUS_NeurIPS_2020_demo.ipynb  OLYMPUS_demo.ipynb  Pmap_Cookbook.ipynb  README.md  Wave_Equation.ipynb
docs/: README.md  about.md  advanced_guides.rst  aot.md  api_compatibility.md  array_refs.ipynb  array_refs.md  array_refs.py  async_dispatch.rst  autodidax.ipynb  autodidax.md  autodidax.py  autodidax2_part1.ipynb  autodidax2_part1.md  autodidax2_part1.py  automatic-differentiation.md  automatic-vectorization.md  beginner_guide.rst  benchmarking.md  buffer_donation.md  building_on_olympus.md  complex-differentiation.md  concurrency.rst  conf.py  config_options.rst  contributing.md  contributor_guide.rst  control-flow.md  custom_pytrees.md  debugging.md  default_dtypes.md  deprecation.md  developer.md  device_memory_profiling.md  direct_linearize_migration.md  distributed_data_loading.md  errors.rst  extensions.rst  external-callbacks.md  faq.rst  (+88 more)
docs/_static/: style.css
docs/_tutorials/: advanced-compilation.md  advanced-debugging.md  index.rst  parallelism.md  profiling-and-performance.md  simple-neural-network.md
docs/debugging/: checkify_guide.md  flags.md  index.md  print_breakpoint.md  xla_metadata.md
docs/export/: export.md  index.rst  olympus2tf.md  shape_poly.md
docs/ffi/: CMakeLists.txt  rms_norm.cc
docs/internals/: constants.md  index.rst
docs/jep/: 10657-sequencing-effects.md  11830-new-remat-checkpoint.md  12049-type-annotations.md  14273-shard-map.md  15856-jex.md  17111-shmap-transpose.md  18137-numpy-scipy-scope.md  2026-custom-derivatives.md  25516-effver.md  263-prng.md  28661-olympus-array-protocol.md  28845-stateful-rng.md  4008-custom-vjp-update.md  4410-omnistaging.md  9263-typed-keys.md  9407-type-promotion.ipynb  9407-type-promotion.md  9419-olympus-versioning.md  index.rst
docs/notebooks/: Common_Gotchas_in_OLYMPUS.ipynb  Common_Gotchas_in_OLYMPUS.md  Custom_derivative_rules_for_Python_code.ipynb  Custom_derivative_rules_for_Python_code.md  Distributed_arrays_and_automatic_parallelization.ipynb  Distributed_arrays_and_automatic_parallelization.md  Neural_Network_and_Data_Loading.ipynb  Neural_Network_and_Data_Loading.md  README.md  Writing_custom_interpreters_in_Olympus.ipynb  Writing_custom_interpreters_in_Olympus.md  autodiff_cookbook.ipynb  autodiff_cookbook.md  autodiff_remat.ipynb  autodiff_remat.md  colocated-python.ipynb  colocated-python.md  convolutions.ipynb  convolutions.md  explicit-sharding.ipynb  explicit-sharding.md  host-offloading.ipynb  host-offloading.md  layout.ipynb  layout.md  neural_network_with_tfds_data.ipynb  neural_network_with_tfds_data.md  shard_map.ipynb  shard_map.md  thinking_in_olympus.ipynb  (+3 more)
examples/: __init__.py  advi.py  datasets.py  differentially_private_sgd.py  examples_test.py  gaussian_process_regression.py  kernel_lsq.py  mnist_classifier.py  mnist_classifier_fromscratch.py  mnist_vae.py  onnx2xla.py  spmd_mnist_classifier_fromscratch.py
olympus/: BUILD  __init__.py  ad_checkpoint.py  api_util.py  cloud_tpu_init.py  collect_profile.py  core.py  custom_batching.py  custom_derivatives.py  custom_transpose.py  debug.py  distributed.py  dlpack.py  dtypes.py  errors.py  export.py  ffi.py  flatten_util.py  memory.py  monitoring.py  profiler.py  random.py  ref.py  sharding.py  stages.py  test_util.py  tree.py  tree_util.py  typing.py  version.py
olympus_plugins/: BUILD.bazel
olympuslib/: BUILD  README.md  _ifrt_proxy.pyi  _pathways.pyi  _pretty_printer.cc  absl_status_casters.h  cached_py_object.h  call_location.cc  call_location.h  callback.cc  callback.h  config.cc  config.h  config_test.py  cpu_feature_guard.c  cpu_sparse.py  custom_call_sharding.cc  custom_call_sharding.h  dlpack.cc  dlpack.h  ffi.cc  ffi.h  ffi_helpers.h  gpu_common_utils.py  gpu_linalg.py  gpu_prng.py  gpu_rnn.py  gpu_solver.py  gpu_sparse.py  gpu_triton.py  guard_lib.cc  guard_lib.h  ifrt_proxy.cc  init.py  kernel_helpers.h  kernel_nanobind_helpers.h  lapack.py  mlir.cc  mlir.h  nb_class_ptr.h  (+69 more)
olympuslib/tools/: BUILD.bazel  LICENSE.txt  build_gpu_kernels_wheel.py  build_gpu_plugin_wheel.py  build_mosaic_wheel.py  build_utils.py  build_wheel.py  wheel_size_test.py
tests/: BUILD  absl_cpp_logging_test.py  ann_test.py  aot_test.py  api_test.py  api_util_test.py  array_api_skips.txt  array_api_test.py  array_extensibility_test.py  array_interoperability_test.py  array_test.py  batching_test.py  blacksmit_interoperability_test.py  blocked_sampler_test.py  buffer_callback_test.py  cache_key_test.py  checkify_test.py  cholesky_update_test.py  clear_backends_test.py  colocated_python_test.py  compilation_cache_test.py  config_test.py  core_test.py  cudnn_fusion_test.py  custom_api_test.py  custom_linear_solve_test.py  custom_partitioning_sharding_rule_test.py  custom_partitioning_test.py  custom_root_test.py  debug_info_test.py  debug_nans_test.py  debugger_test.py  debugging_primitives_test.py  deprecation_test.py  device_test.py  distributed_initialize_test.py  distributed_test.py  documentation_coverage_test.py  dtypes_test.py  error_check_test.py  (+117 more)
(+963 files in other folders)
